--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node-dev ./src/bin/www.ts",
+    "start": "npm run start:prod",
+    "dev": "npm run start:dev",
     "build": "rimraf ./dist && tsc",
-    "devstart": "ts-node-dev ./dist/src/bin/www",
+    "start:dev": "tsnd --rs --respawn --transpile-only ./src/bin/www.ts",
+    "start:prod": "npm run build && node ./dist/bin/www.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npm run lint -- --fix"
   },
@@ -14,11 +16,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.6.0",
+    "express-winston": "^4.0.5",
     "http-errors": "~1.6.3",
-    "jade": "^1.11.0",
     "moment": "^2.27.0",
-    "mongoose": "^5.9.21",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.9.27",
+    "morgan": "~1.9.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/async": "^3.2.3",
@@ -26,19 +30,19 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.7",
     "@types/http-errors": "^1.8.0",
-    "@types/mongoose": "^5.7.32",
+    "@types/mongoose": "^5.7.34",
     "@types/morgan": "^1.9.1",
-    "@types/node": "^14.0.25",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.5.0",
+    "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "ts-node-dev": "^1.0.0-pre.52",
+    "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
 }
