--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.6.0",
-    "express-winston": "^4.0.5",
     "http-errors": "~1.6.3",
+    "json-colorizer": "^2.2.2",
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "morgan": "~1.9.1",
